# opendev-agents

./: .gitignore  CLAUDE.md  HUMANS.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.cursor/: mcp.json
.cursor-templates/: mcp.json.template  ollama-pull.service  ollama.service  openviking.service
.cursor-templates/rules/: api.mdc  base.mdc  database.mdc  messaging.mdc  oslo-config.mdc  packaging.mdc  style.mdc  testing.mdc
.cursor/rules/: base.mdc  linting.mdc  rag-knowledge-mcp.mdc  rag-nova-dev.mdc  rag-openstack.mdc  rag-project.mdc  typing.mdc
docs/: agent-agnostic-approach.md  config-install.md  external-agentic-workflows.md  k8s-agentic-landscape.md  long-running-subagents.md  openviking-comparison.md  persona-search-workflows.md  search-vs-subagents.md
knowledge/baseline/: memory-advisory.mdc
knowledge/openstack-code/: conductor-design.md
knowledge/openstack-docs/: l3-agent.md  nova-scheduler.md
skills/: mcp-rag.md
skills/generate-openstack-commit-message/: README.md  SKILL.md  examples.md  formatting_rules.md  interactive_mode.md
skills/mcp-rag/: SKILL.md
skills/or/: CHANGELOG.md  README.md  SKILL.md  analyze_comments.py  fetch_review.sh  reference.md
skills/sor/: SKILL.md
specs/: lightspeed-core-solr.md  memory-tools.md  rag-mcp-server.md
src/rag_mcp/: __init__.py  _app.py  config.py  constants.py  formatting.py  memory_tools.py  (+2 more)
tests/: test_config.py  test_confluence.py  test_formatting.py  test_memory_local.py  test_memory_openviking.py  test_mock_backend.py  test_solr_backend.py  test_tools.py
(+9 files in other folders)
