[metadata]
name = rag-mcp-server
version = 0.1.0
description = Thin MCP server exposing RAG knowledge as searchable tools and URI-addressable resources
license = Apache-2.0
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
python_requires = >=3.12
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rag-mcp-server = rag_mcp:main
